--- a/brand_logo_detector.ipynb
+++ b/brand_logo_detector.ipynb
@@ -126,8 +126,8 @@
    },
    "outputs": [],
    "source": [
-    "#os.mkdir('models')\n",
-    "create_path('models/')"
+    "os.mkdir('models')\n",
+    "#create_path('models/')"
    ]
   },
   {
@@ -160,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = Path('../')\n",
+    "path = Path()\n",
     "learn_inf = load_learner(path, file='export.pkl')\n",
     "btn_upload = widgets.FileUpload()\n",
     "out_pl = widgets.Output()\n",
